Created a basic realisation of a SPA with vanilla js in a functional style.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spa on Vanilla JS</title>
+  <link rel="stylesheet" href="./static/css/styles.css">
+  <title>Document</title>
 </head>
+
 <body>
-  
+  <nav class="nav">
+    <a href="/" class="nav-link">Main</a>
+    <a href="/news" class="nav-link">News</a>
+    <a href="/about" class="nav-link">About</a>
+    <a href="/contacts" class="nav-link">Contacts</a>
+  </nav>
+
+  <div id="app">
+
+  </div>
+
+  <!-- Script -->
+  <script type="module" src="./static/script.js"></script>
 </body>
+
 </html>
