Added basic styles and simple method without handling errors of receiving data from the server.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./static/css/styles.css">
-  <title>Document</title>
+  <title>SPA on Vanilla JS</title>
 </head>
 
 <body>
@@ -18,8 +18,9 @@
   </nav>
 
   <div id="app">
-
+    
   </div>
+
 
   <!-- Script -->
   <script type="module" src="./static/script.js"></script>
