Removed abstract class and class inheritance.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,10 +17,7 @@
     <a href="/contacts" class="nav-link">Contacts</a>
   </nav>
 
-  <div id="app">
-    
-  </div>
-
+  <div id="app"></div>
 
   <!-- Script -->
   <script type="module" src="./static/script.js"></script>
